<resources>
    <string name="app_name">急救绿道</string>
    <string name="sex_and_age_with_para">性别年龄：%s</string>
    <string name="tab_home">首页</string>
    <string name="tab_video">视频</string>
    <string name="tab_micro">微头条</string>
    <string name="tab_me">我的</string>
    <string name="hint_search_patient">请输入患者姓名</string>
    <string name="home_search_type">类型</string>
    <string name="home_title">急救绿色通道</string>
    <string name="patient_age_with_para">%d 岁</string>
    <string name="patient_stroke_doc">卒中医生： %s</string>
    <string name="patient_chest_pain_doc">胸痛医生： %s</string>
    <string name="patient_receiver_nurse">接诊护士： %s</string>
    <string name="patient_start_green_channel">启动绿道： %s</string>
    <string name="patient_start_disease_time">发病时间： %s</string>
    <string name="patient_out_come_time">转归时间： %s</string>
    <string name="patient_where_about">患者去向： %s</string>
    <string name="disease_type_stroke">卒 中</string>
    <string name="disease_type_chest_pain">胸 痛</string>
    <string name="tips_no_data">暂无数据</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accept_diagnosis_join_path">接诊并加入路径</string>
    <string name="age_cannot_be_greater_than_120">年龄不能大于120</string>
    <string name="app_acute">急性</string>
    <string name="app_add_patient_infomation">新建患者信息</string>
    <string name="app_add_stroke_patient_infomation">新建卒中患者信息</string>
    <string name="app_administration_time">给药时间</string>
    <string name="app_all">全部</string>
    <string name="app_anticoagulant">抗凝药物</string>
    <string name="app_antiplatelet_dose">抗血小板给药</string>
    <string name="app_anxious">急</string>
    <string name="app_arrive_ct">到达CT室</string>
    <string name="app_arrive_time">到达时间</string>
    <string name="app_aspect">ASPECT评分</string>
    <string name="app_aspect_MRI">ASPECT评分-MRI</string>
    <string name="app_aspect_ct">ASPECT评分-CT</string>
    <string name="app_aspects_grade">ASPECTS评分</string>
    <string name="app_aspects_grade_behind_cycle_explanation_content_one">（1）pc-ASPECTS评分建议采用CTA原片或DWI评估更加准确。（平扫CT往往评估的一致性太差）</string>
    <string name="app_aspects_grade_behind_cycle_explanation_content_two">（2）pc-ASPECTS≥8分的患者预后较好，入院pc-ASPECTS评分与3个月预后（mRS）评分呈负相关。</string>
    <string name="app_aspects_grade_behind_cycle_remark_content">后循环ASPECTS评分(pc-ASPECTS)总分10分</string>
    <string name="app_aspects_grade_front_cycle_explanation_content_one">（1）最低分：0；最高分：10；得分越高，预后越好。</string>
    <string name="app_aspects_grade_front_cycle_explanation_content_two">（2）前10项评分总分为10分。0分提示弥漫性缺血累及整个大脑中动脉。</string>
    <string name="app_aspects_grade_front_cycle_remark_content">ASPECTS评分 = 10 -所有10个区域总分（早期缺血改变每累及一个区域减1分）</string>
    <string name="app_aspirin">阿司匹林</string>
    <string name="app_associate_patient_information">关联患者信息</string>
    <string name="app_atorvastatin">阿托伐他汀</string>
    <string name="app_atorvastatin_rosuvastatin">阿托伐他汀和瑞舒伐他汀不能同时输入</string>
    <string name="app_attachment_title">标题名</string>
    <string name="app_attack_way">起病方式</string>
    <string name="app_bedside_check_data_relation_title">床旁快检数据关联</string>
    <string name="app_behind_cycle">后循环</string>
    <string name="app_big_parantheses">{}</string>
    <string name="app_blood_arrive_time">送达检验科</string>
    <string name="app_blood_drawing_time">抽血时间</string>
    <string name="app_blood_drawing_time_and_colon">抽血时间:</string>
    <string name="app_blood_examination_title">血检</string>
    <string name="app_blood_report_time_empty_tips">血检报告时间不能为空</string>
    <string name="app_blood_test_report">血检报告</string>
    <string name="app_blood_time">采血时间</string>
    <string name="app_blood_weight">体重</string>
    <string name="app_cTnI">cTnI</string>
    <string name="app_cTnI_and_colon">cTnI:</string>
    <string name="app_cTnT">cTnT</string>
    <string name="app_cTnT_and_colon">cTnT:</string>
    <string name="app_call_out">呼叫出车（120或其他）</string>
    <string name="app_catheter_room">导管室</string>
    <string name="app_cause_of_delay">耽误原因</string>
    <string name="app_cd_number">身份证号：</string>
    <string name="app_cecurity_number">医保卡号：</string>
    <string name="app_change_hospital">转院（包含任何机构）</string>
    <string name="app_check_department">检查地点</string>
    <string name="app_check_diagnosis_result_cannot_empty">请输入诊断结果</string>
    <string name="app_check_report">出报告</string>
    <string name="app_check_report_time_cannot_empty">请输入出报告时间</string>
    <string name="app_check_start">检查开始</string>
    <string name="app_check_start_time_cannot_empty">请输入检查开始时间</string>
    <string name="app_check_time">核查时间</string>
    <string name="app_checkup">检诊</string>
    <string name="app_chest_pain_vital_sign_left">左上肢</string>
    <string name="app_chest_pain_vital_sign_left_blood_pressure">左上肢血压</string>
    <string name="app_chest_pain_vital_sign_left_diastolic_blood_pressure">左上肢舒张压</string>
    <string name="app_chest_pain_vital_sign_left_systolic_blood_pressure">左上肢收缩压</string>
    <string name="app_chest_pain_vital_sign_right">右上肢</string>
    <string name="app_chest_pain_vital_sign_right_blood_pressure">右上肢血压</string>
    <string name="app_chest_pain_vital_sign_right_diastolic_blood_pressure">右上肢舒张压</string>
    <string name="app_chest_pain_vital_sign_right_systolic_blood_pressure">右上肢收缩压</string>
    <string name="app_choose_content">请选择%s</string>
    <string name="app_choose_from_album">从相册选择</string>
    <string name="app_choose_img">请选择图片</string>
    <string name="app_choose_time">选择时间</string>
    <string name="app_clopidogrel">氯吡格雷</string>
    <string name="app_collect_fail">采集失败</string>
    <string name="app_collect_success">采集成功</string>
    <string name="app_colon">:</string>
    <string name="app_combination_dose">组合给药(%s)</string>
    <string name="app_completed">已完成</string>
    <string name="app_complication">并发症</string>
    <string name="app_condition_assessment">病情评估</string>
    <string name="app_condition_assessment_detail">病情评估明细</string>
    <string name="app_condition_assessment_selection_tips">请选择病情评估</string>
    <string name="app_condition_management">病情处理</string>
    <string name="app_confirm_dialog_confirm_content">请确定%s</string>
    <string name="app_confirm_dialog_read_work_card">请读取%s工牌</string>
    <string name="app_confirmation_time">确诊时间</string>
    <string name="app_confirmation_time_title">确诊时间：</string>
    <string name="app_consultation_apply">申请会诊</string>
    <string name="app_consultation_apply_dialog_msg_internal_heart">确定为该患者申请心内会诊吗？</string>
    <string name="app_default_time_example">年/月/日 -:-</string>
    <string name="app_emergency_docotor">急诊医生</string>
    <string name="app_fast_blood_sugar">快速血糖</string>
    <string name="app_mmol">mmol/L</string>
    <string name="app_patient_arrive_hospital">患者到院</string>
    <string name="app_please_input_fast_blood_sugar">请输入指尖血糖测值</string>
    <string name="app_push_setting_title">消息推送设置</string>
    <string name="app_server_url_setting_title">服务器地址设置</string>
    <string name="app_setting_sync_time_api_key">app_setting_sync_time_api_key</string>
    <string name="app_setting_sync_time_api_title">时间同步服务器地址</string>
    <string name="app_setting_sync_time_default_api">192.168.5.159</string>
    <string name="app_setting_sync_time_default_interval">30</string>
    <string name="app_setting_sync_time_interval_key">app_setting_sync_time_interval_key</string>
    <string name="app_setting_sync_time_interval_title">时间同步间隔（单位：分钟）</string>
    <string name="app_setting_sync_time_title">同步时间服务器地址设置</string>
    <string name="assignment_mode_switch_key">assignment_mode_switch_key</string>
    <string name="cm">cm</string>
    <string name="cpc_service_api_key">cpc_service_api_key</string>
    <string name="cpc_service_api_title">急诊绿色通道服务地址</string>
    <string name="debug_mode_switch_key">debug_mode_switch_key</string>
    <string name="debug_mode_switch_title">调试模式</string>
    <string name="default_cpc_service_api">http://192.168.5.175:30090</string>
    <string name="default_pushservice_url_value">http://192.168.5.175:18427</string>
    <string name="get_data">获取数据</string>
    <string name="kg">Kg</string>
    <string name="lab_cancel">取消</string>
    <string name="lab_confirm">确定</string>
    <string name="login_btn">登录</string>
    <string name="login_et_input_password">请输入密码</string>
    <string name="login_name">用户名</string>
    <string name="login_password">密　码</string>
    <string name="login_remember_passowrd">记住密码</string>
    <string name="messagepush_setting_key">messagepush_setting_key</string>
    <string name="messagepush_switch_key">messagepush_switch_key</string>
    <string name="messagepush_switch_title">消息推送</string>
    <string name="navationbar_mode_switch_key">navationbar_mode_switch_key</string>
    <string name="navationbar_mode_switch_title">隐藏底部导航</string>
    <string name="patient_tall">身高</string>
    <string name="patient_weight">体重</string>
    <string name="please_input_tall">请输入身高</string>
    <string name="please_input_weight">请输入体重</string>
    <string name="prefs_summ_about_us">软件信息</string>
    <string name="prefs_summ_assist_function">设置一些常用辅助功能</string>
    <string name="prefs_summ_operating_environment">设置服务器地址及路由相关</string>
    <string name="prefs_summ_push_message">设置消息推送相关参数</string>
    <string name="prefs_title_about_us">关于</string>
    <string name="prefs_title_assist_function">辅助功能</string>
    <string name="prefs_title_operating_environment">运行环境</string>
    <string name="prefs_title_push_message">消息推送</string>
    <string name="push_server_ip_port_key">messagepush_server_ip_key</string>
    <string name="push_server_ip_port_title">Websocket推送服务地址</string>
    <string name="save">保存</string>
    <string name="sound_switch_key">messagepush_sound_switch_key</string>
    <string name="sound_switch_title">声音开关</string>
    <string name="switch_off">关闭</string>
    <string name="switch_on">开启</string>
    <string name="system_settings">设置</string>
    <string name="thrombolytic_indications_01">1.年龄≥18岁</string>
    <string name="thrombolytic_indications_02">2.症状出现≤4.5h</string>
    <string name="thrombolytic_indications_03">3.有缺血性脑卒中导致的神经功能缺损症状</string>
</resources>